// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saves a reservation 1`] = `
Object {
  "makeWorkshopReservation": Object {
    "codigo": "1234567890",
    "id": "w924pj",
    "nombre": "Pedro",
    "timestamp": "2000-11-22T00:00:00.000Z",
    "url": "https://meet.google.com/lookup/gonzaloconversation",
    "zoom_id": null,
  },
}
`;

exports[`saves a reservation 2`] = `
Object {
  "makeWorkshopReservation": Object {
    "codigo": "1234567890",
    "id": "w924pj",
    "nombre": "Pedro",
    "timestamp": "2000-11-22T00:00:00.000Z",
    "url": "https://meet.google.com/wbu-jzfw-hbs",
    "zoom_id": null,
  },
}
`;

exports[`serves info for selection page 1`] = `
Object {
  "student": Object {
    "apellido_materno": "De San Juan",
    "apellido_paterno": "Paramo",
    "codigo": "1234567890",
    "grupo": "E4-1",
    "nivel": "4",
    "nombre": "Pedro",
  },
  "workshops": Array [
    Object {
      "description": "El alumno se expresa oralmente utilizando las funciones comunicativas y vocabulario adquirido, mejorar la fluidez, y perder el temor a hablar.",
      "levels": Array [
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
      ],
      "name": "Conversation",
      "options": Array [
        Object {
          "available": true,
          "day": "lunes",
          "id": "brendalunes",
          "teacher": "Brenda",
          "time": "12:00 - 13:00",
          "url": "https://us04web.zoom.us/j/77370162343?pwd=VFpCS2xqejF1blJvY2t4OWk1c3RtQT09",
          "workshop": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "lunes",
          "id": "erickalunes",
          "teacher": "Ericka",
          "time": "13:00 - 14:00",
          "url": "https://udg-mx.zoom.us/u/kdPy130e6a",
          "workshop": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "martes",
          "id": "erickamartes",
          "teacher": "Ericka",
          "time": "13:00 - 14:00",
          "url": "https://udg-mx.zoom.us/u/kdPy130e6a",
          "workshop": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "martes",
          "id": "sergiomartes",
          "teacher": "Sergio",
          "time": "14:00 - 15:00",
          "url": "https://meet.google.com/yvi-qirh-gbs",
          "workshop": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "martes",
          "id": "jessicamartes",
          "teacher": "Jessica",
          "time": "16:00 - 17:00",
          "url": "https://us04web.zoom.us/j/5461493724?pwd=djBZZFVSUWJuNG5kSVhkSGVUWnA1QT09",
          "workshop": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "miercoles",
          "id": "carlosmiercoles",
          "teacher": "Carlos",
          "time": "12:00 - 13:00",
          "url": "https://us02web.zoom.us/j/86845226720?pwd=dTVmbllvaXpDLzJneDV1TEVVVU83Zz09",
          "workshop": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "miercoles",
          "id": "sergiomiercoles",
          "teacher": "Sergio",
          "time": "14:00 - 15:00",
          "url": "https://meet.google.com/yvi-qirh-gbs",
          "workshop": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "jueves",
          "id": "gonzalojueves",
          "teacher": "Gonzalo",
          "time": "15:00 - 16:00",
          "url": "http://meet.google.com/lookup/gonzaloconversation",
          "workshop": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "jueves",
          "id": "jessicajueves",
          "teacher": "Jessica",
          "time": "16:00 - 17:00",
          "url": "https://us04web.zoom.us/j/5461493724?pwd=djBZZFVSUWJuNG5kSVhkSGVUWnA1QT09",
          "workshop": "Conversation",
          "zoom_id": null,
        },
      ],
    },
    Object {
      "description": "Ayuda a desarrollar habilidades para el examen de certificación, a partir del dominio ya adquirido del idioma. Duracion: 1 mes.",
      "levels": Array [
        "6",
      ],
      "name": "TOEFL Preparation",
      "options": Array [
        Object {
          "available": true,
          "day": "lunes",
          "id": "carloslunes",
          "teacher": "Carlos",
          "time": "12:00 - 13:00",
          "url": "https://classroom.google.com/c/MTU0NzM2MzkzOTY3?cjc=txkvhcl",
          "workshop": "TOEFL Preparation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "martes",
          "id": "carlosmartes",
          "teacher": "Carlos",
          "time": "12:00 - 13:00",
          "url": "https://classroom.google.com/c/MTU0NzM2MzkzOTY3?cjc=txkvhcl",
          "workshop": "TOEFL Preparation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "miercole",
          "id": "brendamiercoles",
          "teacher": "Brenda",
          "time": "11:00 - 12:00",
          "url": "https://classroom.google.com/c/MjczODExMzE2NzEw?cjc=puxzawj",
          "workshop": "TOEFL Preparation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "jueves",
          "id": "brendajueves",
          "teacher": "Brenda",
          "time": "11:00 - 12:00",
          "url": "https://classroom.google.com/c/MjczODExMzE2NzEw?cjc=puxzawj",
          "workshop": "TOEFL Preparation",
          "zoom_id": null,
        },
      ],
    },
    Object {
      "description": "Lectura de textos e historias sencillas para trabajar con vocabulario y lectura de comprensión. Niveles 1-3",
      "levels": Array [
        "1",
        "2",
        "3",
      ],
      "name": "Basic Reading",
      "options": Array [
        Object {
          "available": true,
          "day": "miercoles",
          "id": "erickamiercoles",
          "teacher": "Ericka",
          "time": "13:00 - 14:00",
          "url": "classroom",
          "workshop": "Basic Reading",
          "zoom_id": "4ty4g44",
        },
      ],
    },
    Object {
      "description": "Lectura de textos e historias sencillas para trabajar con vocabulario y lectura de comprensión. Niveles 1-3",
      "levels": Array [
        "4",
        "5",
        "6",
      ],
      "name": "Advanced Reading",
      "options": Array [
        Object {
          "available": true,
          "day": "martes",
          "id": "gisselmartes",
          "teacher": "Gissel",
          "time": "11:00 - 12:00",
          "url": "https://classroom.google.com/u/1/c/MjcwMzg3ODY3MjM4",
          "workshop": "Advanced Reading",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "miercoles",
          "id": "gisselmiercoles",
          "teacher": "Gissel",
          "time": "11:00 - 12:00",
          "url": "https://classroom.google.com/u/1/c/MjcwMzg3ODY3MjM4",
          "workshop": "Advanced Reading",
          "zoom_id": null,
        },
      ],
    },
    Object {
      "description": "Ayuda a desarrollar la habilidad de comprensión de escucha por medio de audios. Basic: Niveles 1-3; Advanced: Niveles 4-6",
      "levels": Array [
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
      ],
      "name": "Basic/Advanced Listening",
      "options": Array [
        Object {
          "available": true,
          "day": "lunes",
          "id": "zulletlunes",
          "teacher": "Zullet",
          "time": "12:00 - 13:00",
          "url": "https://classroom.google.com/c/MjI0NzkzNjM4NjU2?cjc=3pqkhy4",
          "workshop": "Basic/Advanced Listening",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "martes",
          "id": "zulletmartes",
          "teacher": "Zullet",
          "time": "12:00 - 13:00",
          "url": "https://classroom.google.com/c/MjI0NzkzNjM4NjU2?cjc=3pqkhy4",
          "workshop": "Basic/Advanced Listening",
          "zoom_id": null,
        },
      ],
    },
    Object {
      "description": "Es un proceso de acompañamiento, aclarando dudas. El alumno deberá saber exactamente el tema a repasar.",
      "levels": Array [
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
      ],
      "name": "Tutoring",
      "options": Array [
        Object {
          "available": true,
          "day": "lunes",
          "id": "sergiolunes",
          "teacher": "Sergio",
          "time": "14:00 - 15:00",
          "url": "https://meet.google.com/yvi-qirh-gbs",
          "workshop": "Tutoring",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "miercoles",
          "id": "jessicamiercoles",
          "teacher": "Jessica",
          "time": "11:00 - 12:00",
          "url": "https://us04web.zoom.us/j/5461493724?pwd=djBZZFVSUWJuNG5kSVhkSGVUWnA1QT09",
          "workshop": "Tutoring",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "jueves",
          "id": "gisseljueves",
          "teacher": "Gissel",
          "time": "16:00 - 17:00",
          "url": "https://meet.google.com/nrb-bdav-hru",
          "workshop": "Tutoring",
          "zoom_id": null,
        },
      ],
    },
  ],
}
`;

exports[`serves reservations and teacher info 1`] = `
Object {
  "teacher": Object {
    "name": "Alondra",
    "options": Array [
      Object {
        "day": "lunes",
        "time": "13:00 - 14:00",
        "workshop": "conversation",
      },
    ],
    "reservations": Array [
      Object {
        "code": "1234567890",
        "first_last_name": "PARAMO",
        "group": "E4-1",
        "level": 4,
        "name": "PEDRO",
        "option": Object {
          "day": "lunes",
        },
        "second_last_name": "DE SAN JUAN",
        "timestamp": "2020-11-23T19:16:18.493Z",
      },
    ],
  },
}
`;
